// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Icon Icon 1`] = `
.c1 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

<span
  className="c0 add icon"
>
  <svg
    className="c1"
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
    />
  </svg>
  
</span>
`;

exports[`Storyshots 🚀 Cleanup Components/Icon Icon With Custom Color 1`] = `
.c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #E6413C;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #3C9949;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #FF8800;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #F6F9FC;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 li {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 li > * + * {
  margin-left: 1em;
}

.c0 li + li {
  margin-top: 1em;
}

<ul
  className="c0"
>
  <li>
    <span
      className="c1 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c3 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c4 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c5 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
  </li>
</ul>
`;

exports[`Storyshots 🚀 Cleanup Components/Icon Icon With Custom Size 1`] = `
.c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 12px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 28px;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 32px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 36px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 li {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 li > * + * {
  margin-left: 1em;
}

.c0 li + li {
  margin-top: 1em;
}

<ul
  className="c0"
>
  <li>
    <span
      className="c1 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c3 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c4 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c5 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c6 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c7 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c8 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
  </li>
</ul>
`;

exports[`Storyshots 🚀 Cleanup Components/Icon Icon With Dark Theme 1`] = `
.c3 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

.c1 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c1 .RcButton-startIcon {
  margin-right: 8px;
}

.c1 .RcButton-endIcon {
  margin-left: 8px;
}

.c1.RcButton-text {
  color: #066FAC;
}

.c1.RcButton-text.RcButton-disabled {
  color: #C7C7C7;
}

.c1.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c1.RcButton-contained.RcButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c1.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c1.RcButton-outlined.RcButton-disabled {
  color: #C7C7C7;
  border-color: #C7C7C7;
}

.c1.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 li {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 li > * + * {
  margin-left: 1em;
}

.c0 li + li {
  margin-top: 1em;
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<ul
  className="c0"
>
  <li>
    <button
      className="MuiButtonBase-root-300 MuiButton-root-273 MuiButton-contained-281 RcButton-contained c1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-274"
      >
        light
      </span>
    </button>
    <button
      className="MuiButtonBase-root-300 MuiButton-root-273 MuiButton-contained-281 RcButton-contained c1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-274"
      >
        dark
      </span>
    </button>
    <span
      className="c2 default-file icon"
    >
      <svg
        className="c3"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.556 0h24.889a3.556 3.556 0 0 1 3.556 3.556v24.889a3.556 3.556 0 0 1-3.556 3.556H3.556A3.556 3.556 0 0 1 0 28.445V3.556A3.556 3.556 0 0 1 3.556 0z"
          fill="#fff"
          opacity={0.992}
        />
        <path
          d="M3.556 0h24.889a3.556 3.556 0 0 1 3.556 3.556v24.889a3.556 3.556 0 0 1-3.556 3.556H3.556A3.556 3.556 0 0 1 0 28.445V3.556A3.556 3.556 0 0 1 3.556 0z"
          fill="#4975ed"
          opacity={0.16}
        />
        <path
          d="M22.105 8.889H9.893c-.989-.002-1.793.902-1.794 2.018 0 .091.005.182.016.272.025.222.206.379.402.35a.343.343 0 0 0 .136-.052.933.933 0 0 1 .522-.156h2.557c.462.001.872.333 1.021.825l.061.222c.247.825.932 1.382 1.705 1.384h8.304c.188 0 .373.056.537.162a.332.332 0 0 0 .182.055c.198 0 .359-.181.359-.405v-2.648c0-1.119-.804-2.026-1.796-2.026z"
          fill="#2f51b1"
        />
        <path
          d="M23.965 13.314a1.879 1.879 0 0 0-.928-.242h-8.563a1.113 1.113 0 0 1-1.053-.73l-.063-.196c-.255-.73-.962-1.223-1.758-1.225H8.963a1.818 1.818 0 0 0-.907.232 1.779 1.779 0 0 0-.945 1.561v8.605c0 .99.829 1.793 1.852 1.793h14.074c1.023 0 1.852-.803 1.852-1.793v-6.454a1.77 1.77 0 0 0-.924-1.55z"
          fill="#4b77f1"
        />
      </svg>
      
    </span>
  </li>
</ul>
`;

exports[`Storyshots 🚀 Cleanup Components/Icon Icon With Symbol 1`] = `
.c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 li {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 li > * + * {
  margin-left: 1em;
}

.c0 li + li {
  margin-top: 1em;
}

<ul
  className="c0"
>
  <li>
    <span
      className="c1 add icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25.899 6.101c5.467 5.467 5.467 14.332 0 19.799s-14.332 5.467-19.799 0C.633 20.433.633 11.568 6.1 6.101s14.332-5.467 19.799 0zm-8.898 8.898L17 9a1 1 0 0 0-1.993-.117L15 9l.001 5.999L9 15a1 1 0 0 0-.117 1.993L9 17l6.001-.001L15 23a1 1 0 0 0 1.993.117L17 23l.001-6.001L23 17a1 1 0 0 0 .117-1.993L23 15l-5.999-.001z"
        />
      </svg>
      
    </span>
    <span
      className="c1 phone icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.228 14.296c.124.331.324.717.602 1.154.285.448.649.938 1.09 1.465a13.92 13.92 0 0 0 1.328 1.391c.395.352.753.616 1.068.791.121.067.226.121.312.159l.218-.239.08-.078c-.004.003.001-.001.009-.015l.076-.093c.226-.238.417-.428.575-.573.171-.156.362-.306.617-.477a3.574 3.574 0 0 1 2.169-.483c.803.071 1.484.39 1.965.905.599.566 1.221 1.131 1.865 1.697s1.489 1.28 2.534 2.141c.586.482.976 1.073 1.157 1.757.184.694.125 1.365-.161 1.937-.193.479-.565 1.044-1.117 1.713-.544.659-1.035 1.155-1.456 1.47-.44.363-.947.637-1.516.818a6.01 6.01 0 0 1-1.829.264c-1.073 0-2.192-.21-3.356-.625-1.135-.405-2.29-.984-3.466-1.737a24.989 24.989 0 0 1-3.475-2.719 36.73 36.73 0 0 1-3.448-3.565c-1.492-1.787-2.714-3.551-3.664-5.291-.955-1.731-1.628-3.354-2.018-4.87-.397-1.544-.493-2.938-.281-4.173.204-1.306.769-2.366 1.703-3.149.433-.361 1.041-.728 1.828-1.11.803-.39 1.468-.63 2.018-.716.735-.115 1.455-.01 2.133.308s1.204.818 1.577 1.5a33.63 33.63 0 0 0 1.257 2.265 49.99 49.99 0 0 0 1.696 2.601c.414.626.579 1.307.486 2.017-.091.699-.403 1.322-.977 1.9a6.076 6.076 0 0 1-1.027.705 1.161 1.161 0 0 1-.218.137l-.171.083a2.256 2.256 0 0 1-.223.12 1.99 1.99 0 0 0-.144.067c.027.132.084.31.182.548z"
        />
      </svg>
      
    </span>
  </li>
</ul>
`;
